--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="36x36" href="android-icon-36x36.png">
+
+    <link rel="apple-touch-icon" sizes="36x36" href="android-icon-36x36.png">
+    <meta name="msapplication-TileImage" content="android-icon-36x36.png">
 </head>
 <body>
 
@@ -231,4 +235,5 @@
 </section>
 
 </body>
+
 </html>
