--- a/company.html
+++ b/company.html
@@ -169,10 +169,17 @@
 </section>
 
 <footer class="main-footer">
-    <div class="container" style="text-align: center; padding: 40px 0;">
-        <p>&copy; 2026 <b>KIDV Tech</b>. Supporting Local, Growing Global.</p>
+    <div class="container">
+        <div class="footer-content">
+            <p>&copy; 2026 <b>KIDV Tech</b>. All Rights Reserved.</p>
+            <div class="footer-links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+            </div>
+        </div>
     </div>
 </footer>
 
 </body>
 </html>
+
