--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,14 @@
                     <i class="fas fa-envelope"></i>
                     <div>
                         <h4>Email Us</h4>
-                        <p>contact@kidvtech.com</p>
+                        <p>amit@kidvtech.com</p>
                     </div>
                 </div>
                 <div class="info-card">
                     <i class="fas fa-phone-alt"></i>
                     <div>
                         <h4>Call Us</h4>
-                        <p>+91 XXXXX XXXXX</p>
+                        <p>+91 79844 86885</p>
                     </div>
                 </div>
             </div>
@@ -189,3 +189,4 @@
 
 </body>
 </html>
+
