--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,14 @@
                     <i class="fas fa-envelope"></i>
                     <div>
                         <h4>Email Us</h4>
-                        <p>amit@kidvtech.com</p>
+                        <p><a href="mailto:amit@kidvtech.com">amit@kidvtech.com</a></p>
                     </div>
                 </div>
                 <div class="info-card">
                     <i class="fas fa-phone-alt"></i>
                     <div>
                         <h4>Call Us</h4>
-                        <p>+91 79844 86885</p>
+                        <p><a href="tel:+917984486885">+91 79844 86885</a></p>
                     </div>
                 </div>
             </div>
@@ -189,4 +189,3 @@
 
 </body>
 </html>
-
