--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="android-icon-36x36.png">
     <style>
-      /* Small inline styles for status messages; keep in style.css if you prefer */
       .form-status { margin-top: 12px; font-weight: 600; }
       .form-status.success { color: #157f2e; }
       .form-status.error { color: #b21f2d; }
@@ -60,8 +59,7 @@
             </div>
 
             <div class="contact-form-box">
-                <!-- Updated: form posts to process_contact.php (server-side PHP) -->
-                <form id="kidvContactForm" action="process_contact.php" method="post" novalidate>
+                <form id="kidvContactForm" action="https://formspree.io/f/xzddbrjp" method="POST">
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Your Name" required maxlength="100">
                     </div>
@@ -82,21 +80,12 @@
                         <textarea name="message" placeholder="Tell us about your project..." rows="5" required maxlength="2000"></textarea>
                     </div>
 
-                    <!-- Honeypot (optional simple spam protection) -->
-                    <div style="display:none;">
-                      <label>Leave this field empty: <input type="text" name="hp_field" tabindex="-1" autocomplete="off"></label>
-                    </div>
+                    <input type="text" name="_gotcha" style="display:none">
 
                     <button type="submit" class="btn-quote">Send Message</button>
 
-                    <!-- Status area -->
                     <div id="formStatus" class="form-status" aria-live="polite"></div>
                 </form>
-
-                <!-- Noscript fallback -->
-                <noscript>
-                  <p style="color:#b21f2d;">JavaScript is disabled in your browser. The form will still submit but you won't see inline confirmation. Ensure process_contact.php exists on the server.</p>
-                </noscript>
             </div>
         </div>
     </div>
@@ -115,12 +104,6 @@
 </footer>
 
 <script>
-/*
-  AJAX submit:
-  - Submits to process_contact.php (expects JSON { success: bool, message: string })
-  - Disables the button while sending and shows success/error feedback
-  - Fallback: if JS fails, form will POST normally to process_contact.php
-*/
 (function () {
   const form = document.getElementById('kidvContactForm');
   const statusEl = document.getElementById('formStatus');
@@ -130,57 +113,34 @@
     e.preventDefault();
     statusEl.textContent = '';
     statusEl.className = 'form-status';
-    // simple honeypot check client-side (server must also check hp_field)
-    if (form.hp_field && form.hp_field.value.trim() !== '') {
-      // likely bot, silently stop
-      statusEl.textContent = 'Spam detected.';
-      statusEl.classList.add('error');
-      return;
-    }
 
-    // Basic client validation (browser will handle required, but double-check)
     const formData = new FormData(form);
-    // disable submit
     submitBtn.disabled = true;
-    submitBtn.setAttribute('aria-busy', 'true');
     submitBtn.textContent = 'Sending...';
 
     try {
       const resp = await fetch(form.action, {
         method: 'POST',
         body: formData,
-        credentials: 'same-origin',
         headers: {
-          'X-Requested-With': 'XMLHttpRequest'
+          'Accept': 'application/json'
         }
       });
 
-      // If server returns non-JSON (e.g., PHP error), handle gracefully
-      const contentType = resp.headers.get('Content-Type') || '';
-      let data;
-      if (contentType.indexOf('application/json') !== -1) {
-        data = await resp.json();
-      } else {
-        // fallback - try text
-        const text = await resp.text();
-        try { data = JSON.parse(text); } catch (err) { data = { success: resp.ok, message: text || (resp.ok ? 'Submitted' : 'Server error') }; }
-      }
-
-      if (data && data.success) {
+      if (resp.ok) {
         statusEl.classList.add('success');
-        statusEl.textContent = data.message || 'Thanks — your enquiry has been submitted.';
+        statusEl.textContent = 'Thanks! Your inquiry has been submitted successfully.';
         form.reset();
       } else {
+        const data = await resp.json();
         statusEl.classList.add('error');
-        statusEl.textContent = data && data.message ? data.message : 'Could not send. Please try again later.';
+        statusEl.textContent = data.error || 'Oops! There was a problem submitting your form.';
       }
     } catch (err) {
       statusEl.classList.add('error');
-      statusEl.textContent = 'Network error. Please check your connection and try again.';
-      console.error(err);
+      statusEl.textContent = 'Network error. Please try again later.';
     } finally {
       submitBtn.disabled = false;
-      submitBtn.removeAttribute('aria-busy');
       submitBtn.textContent = 'Send Message';
     }
   });
