--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,7 @@
     <title>Contact Us | KIDV Tech</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="android-icon-36x36.png">
-    <style>
-      .form-status { margin-top: 12px; font-weight: 600; }
-      .form-status.success { color: #157f2e; }
-      .form-status.error { color: #b21f2d; }
-      .btn-quote[disabled] { opacity: 0.6; cursor: not-allowed; }
-    </style>
+    <link rel="stylesheet" href="style.css"> <link rel="icon" type="image/png" href="android-icon-36x36.png">
 </head>
 <body>
 
@@ -22,8 +15,7 @@
         <div class="logo"><img src="logo.png" alt="KIDV Tech"></div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="company.html">Company</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="company.html">Company</a> <a href="contact.html">Contact Us</a>
         </nav>
     </div>
 </header>
@@ -46,45 +38,40 @@
                     <i class="fas fa-envelope"></i>
                     <div>
                         <h4>Email Us</h4>
-                        <p><a href="mailto:amit@kidvtech.com">amit@kidvtech.com</a></p>
+                        <p>amit@kidvtech.com</p>
                     </div>
                 </div>
                 <div class="info-card">
                     <i class="fas fa-phone-alt"></i>
                     <div>
                         <h4>Call Us</h4>
-                        <p><a href="tel:+917984486885">+91 79844 86885</a></p>
+                        <p>+91 79844 86885</p>
                     </div>
                 </div>
             </div>
 
             <div class="contact-form-box">
-                <form id="kidvContactForm" action="https://formspree.io/f/xzddbrjp" method="POST">
+                <form id="kidvContactForm">
                     <div class="form-group">
-                        <input type="text" name="name" placeholder="Your Name" required maxlength="100">
+                        <input type="text" name="name" placeholder="Your Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" name="email" placeholder="Your Email" required maxlength="150">
+                        <input type="email" name="email" placeholder="Your Email" required>
                     </div>
                     <div class="form-group">
                         <select name="solution" required>
                             <option value="" disabled selected>Select Solution</option>
-                            <option value="Website Development">Website Development</option>
-                            <option value="Mobile Apps Development">Mobile Apps Development</option>
-                            <option value="ERPNext Solutions">ERPNext Solutions</option>
-                            <option value="AI Solutions">AI Solutions</option>
-                            <option value="HR Software Solutions">HR Software Solutions</option>
+                            <option value="website">Website Development</option>
+                            <option value="mobile">Mobile Apps Development</option>
+                            <option value="erp">ERPNext Solutions</option>
+                            <option value="ai">AI Solutions</option>
+                            <option value="hr">HR Software Solutions</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <textarea name="message" placeholder="Tell us about your project..." rows="5" required maxlength="2000"></textarea>
+                        <textarea name="message" placeholder="Tell us about your project..." rows="5" required></textarea>
                     </div>
-
-                    <input type="text" name="_gotcha" style="display:none">
-
                     <button type="submit" class="btn-quote">Send Message</button>
-
-                    <div id="formStatus" class="form-status" aria-live="polite"></div>
                 </form>
             </div>
         </div>
@@ -102,49 +89,6 @@
         </div>
     </div>
 </footer>
-
-<script>
-(function () {
-  const form = document.getElementById('kidvContactForm');
-  const statusEl = document.getElementById('formStatus');
-  const submitBtn = form.querySelector('button[type="submit"]');
-
-  form.addEventListener('submit', async function (e) {
-    e.preventDefault();
-    statusEl.textContent = '';
-    statusEl.className = 'form-status';
-
-    const formData = new FormData(form);
-    submitBtn.disabled = true;
-    submitBtn.textContent = 'Sending...';
-
-    try {
-      const resp = await fetch(form.action, {
-        method: 'POST',
-        body: formData,
-        headers: {
-          'Accept': 'application/json'
-        }
-      });
-
-      if (resp.ok) {
-        statusEl.classList.add('success');
-        statusEl.textContent = 'Thanks! Your inquiry has been submitted successfully.';
-        form.reset();
-      } else {
-        statusEl.classList.add('error');
-        statusEl.textContent = 'Oops! There was a problem submitting your form.';
-      }
-    } catch (err) {
-      statusEl.classList.add('error');
-      statusEl.textContent = 'Network error. Please try again later.';
-    } finally {
-      submitBtn.disabled = false;
-      submitBtn.textContent = 'Send Message';
-    }
-  });
-})();
-</script>
 
 </body>
 </html>
