--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <title>Contact Us | KIDV Tech</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css"> <link rel="icon" type="image/png" href="android-icon-36x36.png">
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="icon" type="image/png" href="android-icon-36x36.png">
 </head>
 <body>
 
@@ -15,7 +16,8 @@
         <div class="logo"><img src="logo.png" alt="KIDV Tech"></div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="company.html">Company</a> <a href="contact.html">Contact Us</a>
+            <a href="company.html">Company</a> 
+            <a href="contact.html">Contact Us</a>
         </nav>
     </div>
 </header>
@@ -51,7 +53,7 @@
             </div>
 
             <div class="contact-form-box">
-                <form id="kidvContactForm">
+                <form action="https://formspree.io/f/xzddbrjp" method="POST">
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Your Name" required>
                     </div>
@@ -71,6 +73,9 @@
                     <div class="form-group">
                         <textarea name="message" placeholder="Tell us about your project..." rows="5" required></textarea>
                     </div>
+                    
+                    <input type="text" name="_gotcha" style="display:none">
+                    
                     <button type="submit" class="btn-quote">Send Message</button>
                 </form>
             </div>
