--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css"> 
-    <link rel="icon" type="image/png" href="android-icon-36x36.png">
 </head>
 <body>
 
@@ -31,24 +30,15 @@
             <div class="contact-info">
                 <div class="info-card">
                     <i class="fas fa-map-marker-alt"></i>
-                    <div>
-                        <h4>Our Location</h4>
-                        <p>Ahmedabad, Gujarat, India</p>
-                    </div>
+                    <div><h4>Our Location</h4><p>Ahmedabad, Gujarat, India</p></div>
                 </div>
                 <div class="info-card">
                     <i class="fas fa-envelope"></i>
-                    <div>
-                        <h4>Email Us</h4>
-                        <p>amit@kidvtech.com</p>
-                    </div>
+                    <div><h4>Email Us</h4><p>amit@kidvtech.com</p></div>
                 </div>
                 <div class="info-card">
                     <i class="fas fa-phone-alt"></i>
-                    <div>
-                        <h4>Call Us</h4>
-                        <p>+91 79844 86885</p>
-                    </div>
+                    <div><h4>Call Us</h4><p>+91 79844 86885</p></div>
                 </div>
             </div>
 
@@ -63,18 +53,15 @@
                     <div class="form-group">
                         <select name="solution" required>
                             <option value="" disabled selected>Select Solution</option>
-                            <option value="website">Website Development</option>
-                            <option value="mobile">Mobile Apps Development</option>
-                            <option value="erp">ERPNext Solutions</option>
-                            <option value="ai">AI Solutions</option>
-                            <option value="hr">HR Software Solutions</option>
+                            <option value="Website">Website Development</option>
+                            <option value="Mobile">Mobile Apps Development</option>
+                            <option value="ERP">ERPNext Solutions</option>
+                            <option value="AI">AI Solutions</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <textarea name="message" placeholder="Tell us about your project..." rows="5" required></textarea>
                     </div>
-                    
-                    <input type="text" name="_gotcha" style="display:none">
                     
                     <button type="submit" class="btn-quote">Send Message</button>
                 </form>
@@ -85,13 +72,7 @@
 
 <footer class="main-footer">
     <div class="container">
-        <div class="footer-content">
-            <p>&copy; 2026 <b>KIDV Tech</b>. All Rights Reserved.</p>
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-            </div>
-        </div>
+        <p>&copy; 2026 <b>KIDV Tech</b>. All Rights Reserved.</p>
     </div>
 </footer>
 
