--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,10 @@
     <title>Contact Us | KIDV Tech</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css"> <link rel="icon" type="image/png" href="android-icon-36x36.png">
+    <link rel="stylesheet" href="style.css"> <link rel="icon" type="image/png" href="android-icon-48x48.png">
+    
+    <link rel="icon" type="image/png" sizes="48x48" href="android-icon-48x48.png">
+    <link rel="apple-touch-icon" sizes="48x48" href="android-icon-48x48.png">
 </head>
 <body>
 
@@ -92,3 +95,4 @@
 
 </body>
 </html>
+
