--- a/company.html
+++ b/company.html
@@ -7,6 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    
+    <link rel="icon" type="image/png" sizes="48x48" href="android-icon-48x48.png">
+    <link rel="apple-touch-icon" sizes="48x48" href="android-icon-48x48.png">
     <style>
         /* તમે હાઈલાઈટ કરેલ લખાણને ડાબી બાજુ સેટ કરવા માટે */
         .company-header {
@@ -182,3 +185,4 @@
 
 </body>
 </html>
+
