--- a/mobile-app-list.html
+++ b/mobile-app-list.html
@@ -148,7 +148,7 @@
         <div class="footer-content" style="text-align: center;">
             <p>&copy; 2026 <b>KIDV Tech</b>. All Rights Reserved.</p>
             <div class="footer-links">
-                <a href="#">Privacy Policy</a>
+                <a href="privacy-policy.html">Privacy Policy</a>
                 <a href="#">Terms of Service</a>
             </div>
         </div>
