Restore original index.html content
Restored the original content of index.html after it was modified. Ensured that all HTML elements and styles are intact.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             display: inline-block;
         }
         .hero-list li:hover {
-            color: #ffffff;
+            color: #0d18e0;
             transform: translateX(10px);
         }
 
@@ -319,3 +319,4 @@
 
 </body>
 </html>
+
