--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             display: flex;
             align-items: center;
             gap: 15px;
-            color: #cbd5e1;
+            color: #0d18e0;
             transition: 0.3s;
         }
         /* આઈકોન માટે સ્પેશિયલ સ્ટાઈલ */
@@ -41,7 +41,7 @@
             display: inline-block;
         }
         .hero-list li:hover {
-            color: #0d18e0;
+            color: #ffffff;
             transform: translateX(10px);
         }
 
@@ -319,4 +319,5 @@
 
 </body>
 </html>
+
 
